finished main3 section

--- a/index.html
+++ b/index.html
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <link rel="stylesheet" href="./assets/styles/style.css">
-</head>
-<body>
-   <div class="container">
-    <h1>hheheh</h1>
-   </div>
+    <link rel="stylesheet" href="./assets/styles/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="skill_section">
+        <div class="skill_sectionRight">
+          <button>College Level</button>
+          <h1>Don’t waste time in COVID-19 pandemic.Develop your skills.</h1>
+          <p>
+            High-definition video is video of higher resolution and quality than
+            standard-definition. While there is no standardized meaning for
+            high-definition, generally any video.
+          </p>
+          <button>Registation Now</button>
+        </div>
+        <div class="skill_sectionLeft">
+          <div class="img1">
+            <img src="./img/html.svg" alt="img" />
+          </div>
+          <img class="img2" src="./img/Pattern.png" alt="img" />
+          <div class="img3">
+            <img src="./img/php-code.svg" alt="img" />
+          </div>
+          <div class="img4">
+            <img src="./img/java.svg" alt="js img" />
+          </div>
+          <img class="img5" src="./img/bro.png" alt="img" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+        <div class="information">
+            <div class="information_left">
+                <img src="./img/bro2.png" alt="img">
+            </div>
+            <div class="information_right">
+                <h1>Want to share your
+                    knowledge? Join us
+                    a Mentor</h1>
+                    <p>High-definition video is video of higher resolution and quality than standard-definition. While there is no standardized meaning for high-definition, generally any video.</p>
+                    <button>Career Information</button>
+                </div>
     
-</body>
+        </div>
+    </div>
+
+  </body>
 </html>
