--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Eduvi</title>
     </head>
     <body>
+
+        <!-- header  -->
+
         <header class="header">
             <div class="container">
                 <div class="navbar">
@@ -132,5 +135,9 @@
                 <img src="./assets/images/icons/header-blocks.svg" width="50" height="50" alt="image">
             </div>
         </header>
+
+        <!-- header -->
+
+        
     </body>
 </html>
