--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="img4">
             <img src="./img/java.svg" alt="js img" />
           </div>
-          <img class="img5" src="./img/bro.png" alt="img" />
+          <img class="img5" src="./img/bro.png" alt="img" width="580px" height="590px" />
         </div>
       </div>
     </div>
