--- a/index.html
+++ b/index.html
@@ -1,18 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
     <title></title>
-</head>
-<body>
-       <!-- header -->
-       <!-- header -->
-       <!-- main -->
-       
-       <!-- main -->
-<!-- footer -->
-<!-- footer -->
-</body>
+  </head>
+  <body>
+    <!-- header -->
+    <!-- header -->
+    <!-- main -->
+    <div class="container">
+      <div class="contact">
+        <h1 class="contact__title">High quality video, audio & live classes</h1>
+        <p class="contact__text">
+          High-definition video is video of higher resolution and quality than
+          standard-definition. While there is no standardized meaning for
+          high-definition, generally any video image with considerably more than
+          480 vertical scan lines or 576 vertical lines is considered
+          high-definition.
+        </p>
+        <button class="contact__btn">Visit Courses</button>
+        <div class="call">
+          <div class="call__window">
+            <span
+              ><img
+                class="Window__img"
+                src="./assets/images/icons/Pattern.svg"
+                alt="Window Icon"
+                width="180"
+                height="185"
+            /></span>
+            <div class="call__bottom">
+              <img
+                class="bott__img"
+                src="./assets/images/images/portrait-little-girl-coloring 1.png"
+                alt="Img"
+              />
+              <img
+                src="./assets/images/icons/Call Button.svg"
+                alt="Call Icn"
+                width="60"
+                height="60"
+              />
+              <img
+                src="./assets/images/icons/arrow.svg"
+                alt="Arrow Icn"
+                width="60"
+                height="60"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="connection__cards">
+          <div class="conn__card">
+            <img
+              src="./assets/images/icons/icon.svg"
+              alt="Card Icon"
+              width="70"
+              height="70"
+            /><span class="card__diff">Audio Classes</span>
+          </div>
+          <div class="conn__card">
+            <img
+              src="./assets/images/icons/icon (1).svg"
+              alt="Card Icon"
+              width="70"
+              height="70"
+            /><span class="card__diff">Live Classes</span>
+          </div>
+          <div class="conn__card">
+            <img
+              src="./assets/images/icons/icon (2).svg"
+              alt="Card Icon"
+              width="70"
+              height="70"
+            /><span class="card__diff">Recorded Class</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- main -->
+    <!-- footer -->
+    <!-- footer -->
+  </body>
 </html>
